@@ -6,6 +6,8 @@ Nagios 2.x Change Log
 2.6 - ??/??/2006
 ----------------
 * Fix for unscheduled triggered downtime entries
+* Fix for embedded audio in tac and status CGIs
+
 
 
 2.5 - 07/13/2006
